@@ -1,3 +1,6 @@
+* Add cache timeout for web
+* Allow the bus requests to be redirected to another host
+* Add support for CORS
 * Add extras modules to ModuleTestCase
 * Add timeout to Report.convert
 * Allow records from XML with noupdate to be deleted
